# casty

./: .gitignore  CMakeLists.txt  README.md  install.sh  main.c
bluetooth/: server.c  server.h
client/: README.md  main.py  pyproject.toml
include/: server.h
server/: Makefile  README.md  boot.s  linker.ld  main.c
src/: server.c
